K8S/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: teamtwo-namespace
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
