K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-two-app-ingress
  namespace: teamtwo-namespace
spec:
  ingressClassName: nginx  
  rules:
  - host: ac1a16fdbdedc4bf488cf808966316e8-1863837325.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: team-two-app
            port:
              number: 5000
  tls:  # Correct placement of the tls block
  - hosts:
    - ac1a16fdbdedc4bf488cf808966316e8-1863837325.us-east-2.elb.amazonaws.com
    secretName: my-tls-secret
