K8S/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: teamtwo-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ac1a16fdbdedc4bf488cf808966316e8-1863837325.us-east-2.elb.amazonaws.com  # Replace with your domain name
    secretName: prometheus-my-tls-secret  # Replace with your TLS secret name
  rules:
  - host: ac1a16fdbdedc4bf488cf808966316e8-1863837325.us-east-2.elb.amazonaws.com  # Replace with your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
